--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body {
   background: #d1cdcd;
 }
 
-#nav-bar {
+.nav-bar {
   background-color: #2b2c36;
 }
 
-#nav-bar-text {
+.nav-bar-text {
   color: white;
 }
 
@@ -15,16 +15,16 @@ body {
   border-radius: 20px;
 }
 
-#footer-placeholder {
+.footer-placeholder {
   background-color: #2b2c36;
   bottom: 0%;
 }
 
-#footer-about-me {
+.footer-about-me {
   color: white;
 }
 
-#github-link {
+.github-link {
   background-image: url("github-mark.png");
 }
 
@@ -38,13 +38,13 @@ body {
   right: 6.7%;
 } */
 
-#collapsible-contents-button {
+.collapsible-contents-button {
   position: fixed;
   bottom: 5%;
   right: 6.7%;
 }
 
-#collapse1 {
+#collapse {
   background-color: #f0ede6;
   width: 112%;
   border-style: solid;
@@ -53,13 +53,12 @@ body {
   box-shadow: 2px 2px 3px;
 }
 
-#p-collapsible-table-of-contents {
+.p-collapsible-table-of-contents {
   font-size: 15px;
   white-space: pre;
-  overflow: scroll;
 }
 
-#div-information {
+.div-information {
   background-color: white;
   padding-top: 5%;
   padding-bottom: 5%;
@@ -86,11 +85,11 @@ h4 {
   text-align: center;
 }
 
-#about-hr {
+.about-hr {
   background-color: white;
 }
 
-#side-bar-about {
+.side-bar-about {
   background-color: black;
   color: white;
   text-align: center;
@@ -99,32 +98,38 @@ h4 {
   padding-right: 5%;
 }
 
-#category-header {
+.category-header {
   margin-top: 10%;
+  font-weight: bold;
+  font-size: 200%;
 }
 
-#section-header {
+.section-header {
   margin-top: 7%;
   margin-bottom: 4%;
+  font-weight: bold;
+  font-size: 150%;
 }
 
-#needed-section {
+.subsection-header {
+  margin-top: 4%;
+  margin-bottom: 4%;
+  font-weight: bold;
+  font-size: 110%;
+}
+
+.needed-section {
   color: grey;
 }
 
-#table-of-contents {
+.table-of-contents {
   font-size: 17px;
   margin-bottom: 3%;
   padding-left: 1%;
   white-space: pre;
 }
 
-#equation-section-header {
-  margin-top: 4%;
-  margin-bottom: 4%;
-}
-
-#psuedo-code {
+.psuedo-code {
   white-space: pre;
   word-break: break-all;
   font-family: 'Courier New', Courier, monospace;
@@ -133,6 +138,6 @@ h4 {
   margin: 5%;
 }
 
-#math-notation {
+.math-notation {
   margin: 5%;
 }
