--- a/style.css
+++ b/style.css
@@ -15,55 +15,43 @@ body {
   border-radius: 20px;
 }
 
-.footer-placeholder {
-  background-color: #2b2c36;
-  bottom: 0%;
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: rgba(253, 152, 0, 0.959);
+  border-radius: 50%;
+  display: inline-block;
 }
-
-.footer-about-me {
-  color: white;
-}
-
-.github-link {
-  background-image: url("github-mark.png");
-}
-
-/* #collapsible-contents-button {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0rem;
-  right: 2rem;
-  bottom: 1rem;
-  bottom: 5%;
-  right: 6.7%;
-} */
 
 .collapsible-contents-button {
   position: fixed;
-  bottom: 5%;
-  right: 6.7%;
+  bottom: 2em;
+  right: 2em;
 }
+
+.contents-button {
+  border-radius: 10px;
+}
+
+/* .contents-button:hover {
+  background-color: white;
+  color: black;
+} */
 
 #collapse {
   background-color: #f0ede6;
-  width: 112%;
+  margin-bottom: 1em;
+  max-height: 25em;
+  overflow-y: scroll;
   border-style: solid;
   border-radius: 20px;
-  margin-bottom: 5%;
   box-shadow: 2px 2px 3px;
+  word-wrap: break-word;
 }
 
-.p-collapsible-table-of-contents {
-  font-size: 15px;
-  white-space: pre;
-}
-
-.div-information {
+.information {
   background-color: white;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  padding-left: 15%;
-  padding-right: 15%;
+  padding: 5% 8% 5% 8%;
   margin-left: 5%; 
   margin-right: 5%;
   margin-bottom: 10%; 
@@ -87,6 +75,10 @@ h4 {
 
 .about-hr {
   background-color: white;
+}
+
+.how-to-read {
+   white-space: pre-wrap;
 }
 
 .side-bar-about {
@@ -122,16 +114,16 @@ h4 {
   color: grey;
 }
 
-.table-of-contents {
+/* .table-of-contents {
   font-size: 17px;
   margin-bottom: 3%;
   padding-left: 1%;
   white-space: pre;
-}
+} */
 
-.psuedo-code {
+.code {
   white-space: pre;
-  word-break: break-all;
+  word-wrap: break-word;
   font-family: 'Courier New', Courier, monospace;
   background-color: #e3e0da;
   border-radius: 25px;
@@ -140,4 +132,17 @@ h4 {
 
 .math-notation {
   margin: 5%;
+}
+
+.footer-placeholder {
+  background-color: #2b2c36;
+  bottom: 0%;
+}
+
+.footer-about-me {
+  color: white;
+}
+
+.social-media {
+  font-size: 15px;
 }
